--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/datasource-rest": "^6.0.1",
     "@apollo/server": "^4.7.4",
+    "apollo-server-core": "^3.13.0",
     "apollo-server-errors": "^3.3.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
